--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,7 @@
 @source "../../.flowbite-react/class-list.json";
 
 :root {
-  --background: #ffffff;
+  --background: linear-gradient(180deg,rgba(225, 239, 254, 1) 0%, rgba(255, 255, 255, 1) 50%, rgba(255, 255, 255, 1) 100%);
   --foreground: #171717;
 }
 
@@ -16,7 +16,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #121114;
+    --background: linear-gradient(180deg,rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 1) 50%, rgba(31, 41, 55, 1) 100%);;
     --foreground: #b5c1cd;
   }
 }
@@ -27,6 +27,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   -ms-overflow-style: none;
   scrollbar-width: none;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
 ::-webkit-scrollbar {
