--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,7 @@
 @source "../../.flowbite-react/class-list.json";
 
 :root {
-  --background: linear-gradient(180deg,#E1EFFE 0%, rgba(255, 255, 255, 1) 50%, rgba(255, 255, 255, 1) 100%);
+  --background: linear-gradient(180deg,rgba(225, 239, 254, 1) 0%, rgba(255, 255, 255, 1) 20%, rgba(255, 255, 255, 1) 100%);
   --foreground: #171717;
 }
 
